// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots page/My Default 1`] = `
<div>
  <h1>
    マイページ
  </h1>
  <h3>
    ようこそ、
    テスト太郎
    さん
  </h3>
</div>
`;

exports[`Storyshots page/My Error 1`] = `
<div>
  <h1>
    マイページ
  </h1>
  <h3>
    読み込みエラー
  </h3>
</div>
`;
